welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: ';' expected but integer literal found.
  if (Math.abs(100-n))<10){
                       ^